# GraduationProject

./: .gitignore  CMakeLists.txt  GraduationProject.sln  SSDConfigurator.sln
CARSDK/: CARSDK.vcxitems  CARSDK.vcxitems.filters
ComputerAidedResearchDevelopmentKit/: ComputerAidedResearchDevelopmentKit.cpp  ComputerAidedResearchDevelopmentKit.vcxproj  ComputerAidedResearchDevelopmentKit.vcxproj.filters  stdafx.cpp  stdafx.h
PaperDisplay/: DataHandlingPage.html  DataModelingPage.html  ResultPage.html
PublicModule/: ChineseNumberUtils.h  DataUtils.cpp  DataUtils.h  DateTimeUtils.cpp  DateTimeUtils.h  EncryptionUtils.h  FileUtils.cpp  FileUtils.h  FunctionUtils.h  Global.h  MailUtils.cpp  MailUtils.h  MathUtils.h  NumberVariant.cpp  NumberVariant.h  PublicModule.vcxitems  PublicModule.vcxitems.filters  RandomUtils.cpp  RandomUtils.h  StringUtils.cpp  StringUtils.h  SystemUtils.cpp  SystemUtils.h  ThreadUtils.h  UuidUtils.cpp  UuidUtils.h  XMLUtils.cpp  XMLUtils.h
PublicModuleGUI/: IWebEngineDialogWidget.cpp  IWebEngineDialogWidget.h  PublicModuleGUI.vcxitems  PublicModuleGUI.vcxitems.filters  QDraggableFlatteningDialog.h  QDraggableFlatteningWidget.h  QMessageBoxUtils.cpp  QMessageBoxUtils.h  QWebEngineWidget.cpp  QWebEngineWidget.h
SSDConfigurator/: SSDConfigurator.vcxproj
SSGUIUtilsSrc/: SSGUIUtilsSrc.vcxitems  SSGUIUtilsSrc.vcxitems.filters
SSUtils/: SSUtils.vcxproj  stdafx.h
SSUtilsGUISrc/: SSUtilsGUISrc.vcxitems.filters
SSUtilsSrc/: SSUtilsSrc.vcxitems  SSUtilsSrc.vcxitems.filters
SSXSDUtils/: AnyAttribute.cpp  AnyElement.h  AttributeGroup.h  ComplexContent.cpp  ComplexContent.h  ComplexTypeAnalyzer.h  ComplexTypeInterface.h  ComplexTypeModel.cpp  ComplexTypeModel.h  ComplexTypeNormalizer.h  ContainerType.h  Element.cpp  SSXSDUtils.cpp  SSXSDUtils.vcxproj  SSXSDUtils.vcxproj.filters  SimpleContent.cpp  SimpleContent.h  SimpleTypeInterface.cpp  SimpleTypeLengthLimitConfiguration.h  SimpleTypeModel.cpp  (+11 more)
(+559 files in other folders)
